--- a/13_combine/templates/temp.html
+++ b/13_combine/templates/temp.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <!-- 
-  Clyde 'Thluffy' Sinclair
-  SoftDev
-  Oct 2022
+  Andy Shyklo, Ankita Saha, Abidur Rahman
+Python Pigs
+SoftDev
+K12 - templates more w/ occupations.csv
+2024-09-27
+time spent: 1 hr
  -->
 
 <html>
