--- a/13_combine/templates/tablified.html
+++ b/13_combine/templates/tablified.html
@@ -33,7 +33,7 @@ time spent: 1 hr
       <tr>
           <td>{{d}}</td>
           <td>{{dictValues.get(d)[0]}}</td>
-          <td>{{dictValues.get(d)[1]}}</td>
+          <a href=dictValues.get(d)[1]><td>{{dictValues.get(d)[1]}}</td></a>
       </tr>
       {% endfor %}
     </table>
