--- a/15_flask-form/templates/response.html
+++ b/15_flask-form/templates/response.html
@@ -7,17 +7,19 @@
 
   <body>
     <h1>
-      Python Pigs: Andy, Ankita, Abidur
+      Python Pigs 
     </h1>
 
-
-    <h3>
-      Enter your username below to proceed.
-    </h3>
-    <div action="/auth" method="POST">
-      Hello! {{user}}
-      Used POST Method
-    </div>
+    
+      Hello {{user}}!
+      <br>
+      used get method
+      <br>
+      get: gets data passed from the code base -> gets the info in request.args, from the url -> to display the content on page, less sensitive info
+      <br>
+      post: sends data back throuhg request body to server -> prob for passwords?
+  
+    
     <br>
   </body>
 
