--- a/15_flask-form/templates/login.html
+++ b/15_flask-form/templates/login.html
@@ -24,14 +24,20 @@
 
   <body>
     <h1>
-      Python Pigs W/O 1: Ankita, Abidur
+      Python Pigs: Ankita, Abidur, Andy
     </h1>
 
 
     <h3>
       Enter your username below to proceed.
     </h3>
+    <h1>GET</h1>
     <form action="/auth" method="GET">
+      <input type="text" name="username">
+      <input type="submit" name="sub1">
+    </form>
+    <h1>POST</h1>
+    <form action="/auth" method="POST">
       <input type="text" name="username">
       <input type="submit" name="sub1">
     </form>
