--- a/17_style-layer/mimic.css
+++ b/17_style-layer/mimic.css
@@ -1,4 +1,4 @@
-body {
+ body {
     font-family: sans-serif;
     background-color: #333;
     color: #fff;
@@ -17,6 +17,10 @@ h1 {
     color: #333;
 }
 
-.stuff {
+.n {
   display: flex;
+}
+
+.bar {
+  padding-right: 20px;
 }
