--- a/17_style-layer/mimic.css
+++ b/17_style-layer/mimic.css
@@ -1,6 +1,6 @@
  body {
-    font-family: sans-serif;
-    background-color: #333;
+    font-family: arial;
+    background-color: #5c5c5c;
     color: #fff;
 }
 
@@ -13,8 +13,7 @@ header {
 }
 
 h1 {
-    font-size: 25px;
-    color: #333;
+    color: white;
 }
 
 .n {
@@ -22,5 +21,8 @@ h1 {
 }
 
 .bar {
-  padding-right: 20px;
+  padding-right: 70px;
+}
+footer {
+  text-align: end;
 }
