--- a/23_rest/templates/main.html
+++ b/23_rest/templates/main.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>nasa api</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
+  <p>{{txt}}</p>
+  <img src="{{img}}">
   </body>
