--- a/23_rest/templates/main.html
+++ b/23_rest/templates/main.html
@@ -14,7 +14,7 @@
   <body>
   <h1>Mars Rovers</h1> 
   <h3>Jazzy Cheese: Ankita & Jady</h3>
-  <p>{{txt}}</p>
+  <p>earth date: {{txt}}</p>
   <p>{{txt0}}</p>
   <p>{{txt00}}</p>
   <img src="{{img}}" height="450px" width="580px">
